# bootstrap

./: CMakeLists.txt  syntax.def
include/common/: result.h  string_util.hpp  types.h
include/parser/: lexer.h  parser.h  token.hpp
include/parser/ast/: ast_node.hpp
src/: main.cpp
src/parser/: lexer.cpp  token.cpp
